--- a/exercise1/app/build.gradle
+++ b/exercise1/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.jakewharton.timber:timber:2.5.1'
 }
