--- a/exercise1/app/src/main/AndroidManifest.xml
+++ b/exercise1/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme" android:name=".application.MyApplication">
 
         <activity
-            android:name=".activitis.MainActivity"
+            android:name=".activities.MainActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
             <intent-filter>
